<resources>
    <string name="app_name">New Gallery App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text">text</string>
    <string name="galley">Galley</string>
    <string name="photos">Photos</string>
    <string name="videos">Videos</string>
    <string name="size">Size</string>
    <string name="favorites">Favorites</string>
    <string name="secure_lock">Secure Lock</string>
    <string name="trash_bin">Trash bin</string>
    <string name="change_language">Change Language</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="rate_us">Rate us</string>
    <string name="share_app">Share app</string>
    <string name="other_tools">Other tools</string>
    <string name="OpenDrawer">Open navigation drawer</string>
    <string name="CloseDrawer">Close navigation drawer</string>
    <string name="features_tools">Features tools</string>
    <string name="share">Share</string>
    <string name="hide">Hide</string>
    <string name="delete">Delete</string>
    <string name="more">More</string>
    <string name="favorite_images">Favorite</string>
    <string name="no_data_found">No Data Found</string>
    <string name="file_name">File Name</string>
    <string name="path">Path</string>
    <string name="name">Name</string>
    <string name="time">Time</string>
    <string name="more_details">More details</string>
    <string name="edit">Edit</string>
    <string name="select">Select</string>
    <string name="column">Column</string>
    <string name="slide_show">Slide Show</string>
    <string name="filters">Filters</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="_5_column">5 Column</string>
    <string name="_4_column">4 Column</string>
    <string name="_2_column">2 Column</string>
    <string name="_3_column">3 Column</string>
    <string name="select_columns">Select Columns</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="search_for_files_or_albums">Search for files or albums…</string>
    <string name="setting">Setting</string>
    <string name="album">Album</string>
    <string name="date">Date</string>
    <string name="details">Details</string>
    <string name="save">Save</string>
    <string name="rename">Rename</string>
    <string name="type_here">Type here...</string>
    <string name="media">Media</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="restore">Restore</string>
    <string name="galley_allText">Gallery app is fast, light, modern and rich-feature app for organizing your photos\n</string>

    <string name="share_favorites">Share Favorites</string>
    <string name="unfavorite">Unfavorite</string>
</resources>