<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popupItem_two"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A5000000">

    <LinearLayout
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_130sdp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginEnd="30dp"
        android:background="@drawable/more_item_round_shape"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_4sdp">

        <TextView
            android:id="@+id/selectedCheckBoxItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6sdp"
            android:fontFamily="@font/poppins_medium"
            android:padding="@dimen/_6sdp"
            android:text="@string/select"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp" />


        <TextView
            android:id="@+id/column"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6sdp"
            android:fontFamily="@font/poppins_medium"
            android:padding="@dimen/_6sdp"
            android:text="@string/column"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp" />


        <TextView
            android:id="@+id/slideShow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6sdp"
            android:fontFamily="@font/poppins_medium"
            android:padding="@dimen/_6sdp"
            android:text="@string/slide_show"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp" />


    </LinearLayout>

</RelativeLayout>