<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popupItem_column_items"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#77000000"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="35dp"
        android:background="@drawable/more_item_round_shape"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/select_columns"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/Checkbox_2_column"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="10dp"
                android:background="@drawable/empty_select_item"
                android:button="@null" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/_2_column"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/Checkbox_3_column"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="10dp"
                android:background="@drawable/empty_select_item"
                android:button="@null" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/_3_column"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/Checkbox_4_column"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="10dp"
                android:background="@drawable/empty_select_item"
                android:button="@null" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/_4_column"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/Checkbox_5_column"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="10dp"
                android:background="@drawable/empty_select_item"
                android:button="@null" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/_5_column"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cancel_column"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/cancel"
                android:gravity="center"
                android:background="@drawable/cancel_btn_rounded_border_shape"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/save_column"
                android:layout_width="55dp"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:background="@drawable/ok_btn_rounded_border_shape"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>
