<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popupItem"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#A5000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/more_item_round_shape"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:padding="@dimen/_6sdp"
        android:layout_marginEnd="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/details"
            android:layout_margin="@dimen/_6sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp" />

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/_8sdp"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/file_name"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/image_name_popup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/name"
                android:gravity="center_vertical"
                android:textColor="#8A8A8A"
                android:textSize="@dimen/_11sdp" />


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_margin="@dimen/_8sdp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/time"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/time_popup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/name"
                android:gravity="center_vertical"
                android:textColor="#8A8A8A"
                android:textSize="@dimen/_11sdp" />


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_margin="@dimen/_8sdp"
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/size"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/size_popup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/name"
                android:gravity="center_vertical"
                android:textColor="#8A8A8A"
                android:textSize="@dimen/_11sdp" />


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_margin="@dimen/_8sdp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/date"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/date_popup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/name"
                android:gravity="center_vertical"
                android:textColor="#8A8A8A"
                android:textSize="@dimen/_11sdp" />


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_margin="@dimen/_8sdp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/path"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/path_popup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/name"
                android:gravity="center_vertical"
                android:maxLines="3"
                android:textColor="#8A8A8A"
                android:textSize="@dimen/_11sdp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
