<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popupItem_create"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#77000000"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="35dp"
        android:background="@drawable/more_item_round_shape"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_6sdp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="Create New Album"
            android:textColor="@color/black"
            android:textSize="@dimen/_17sdp" />

        <EditText
            android:id="@+id/create_folder_searchEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:background="@drawable/cancel_btn_rounded_border_shape"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/type_here"
            android:inputType="text"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textColorHint="#ABABAB"
            android:textSize="@dimen/_12sdp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/create_folder_chancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_weight="1"
                android:background="@drawable/cancel_btn_rounded_border_shape"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:id="@+id/create_folder_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_weight="1"
                android:background="@drawable/ok_btn_rounded_border_shape"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>
